--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="dashboard">
     <div class="profile-pic">
             <form [formGroup] = "form">
@@ -17,3 +19,125 @@
         <h1>{{ userData.firstName+ " "+ userData.lastName }}</h1>
     </div>
 </div>
+    
+  <div class="wrap">
+    <div class="timeline">
+      <div class="year"><h2>2014</h2>
+        <div class="evt">
+          <div class="in">
+            <span class="date">
+              <span class="day">26</span> 
+              <span class="month">May</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">first</p> 
+        </div>
+        </div>
+        
+          <div class="evt">
+          <div class="in"> 
+            <span class="date">
+              <span class="day">02</span>
+              <span class="month">Jan</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">Second</p>
+        </div>
+        </div>
+        
+      </div>
+      <div class="year">
+        <h2>2013</h2>
+        <div class="evt">
+          <div class="in">
+          <span class="date">
+              <span class="day">05</span>
+              <span class="month">Dec</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">stuff</p>
+        </div>
+        </div>
+        <div class="evt">
+          <div class="in">
+           <span class="date">
+              <span class="day">04</span>
+              <span class="month">Nov</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">data</p>
+          </div>
+        </div>
+        <div class="evt">
+         <span class="date">
+              <span class="day">25</span>
+              <span class="month">Jun</span>
+            </span>
+          <div class="in">
+          <h2>Title</h2>
+          <p class="data">yup</p>
+        </div>
+        </div>
+      </div>
+      
+      <div class="year"><h2>2012</h2>
+        <div class="evt">
+          <div class="in">
+            <span class="date">
+              <span class="day">15</span>
+              <span class="month">Aug</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">first</p>
+        </div>
+        </div>
+        
+          <div class="evt">
+          <div class="in">
+            <span class="date">
+              <span class="day">11</span>
+              <span class="month">Feb</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">first</p>
+        </div>
+        </div>
+        
+        <div class="evt">
+          <div class="in">
+            <span class="date">
+              <span class="day">20</span>
+              <span class="month">Jan</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">first</p>
+        </div>
+        </div>
+      </div>
+      
+      <div class="year"><h2>2011</h2>
+        <div class="evt">
+          <div class="in">
+            <span class="date">
+              <span class="day">03</span>
+              <span class="month">Jul</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">Some things</p>
+        </div>
+        </div>
+        
+          <div class="evt">
+          <div class="in"> 
+            <span class="date">
+              <span class="day">02</span>
+              <span class="month">Apr</span>
+            </span>
+          <h2>Title</h2>
+          <p class="data">Start</p>
+        </div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
