--- a/src/app/search/search/search.component.html
+++ b/src/app/search/search/search.component.html
@@ -8,7 +8,7 @@
                 </div>
               </div>
             </div>
-            <img src="/images/avatar/large/elliot.jpg">
+            <img [src]="user.profileImage">
           </div>
           <div class="content">
             <a class="header">{{ user.firstName + " " + user.lastName }}</a>
